# experiment-analysis

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  test.py
demo/: ab.ipynb
experiment_analysis/: constants.py
experiment_analysis/ab/: README.md  additive_metric.py  additive_metric_inference.py  metric_inference.py  randomization_inference.py  ratio_metric.py  ratio_metric_inference.py
experiment_analysis/ab/additive_metric/: additive_metric.py  additive_metric_bootstrap_inference.py  additive_metric_randomization_inference.py
experiment_analysis/base/: base.py  base_additive_metric.py  base_bootstrap_inference.py  base_randomization_inference.py  base_simulation_inference.py  randomization_inference.py
experiment_analysis/data_models/: additive_metric_data.py  ratio_metric_data.py
experiment_analysis/stats/: bootstrap.py  randomization.py  zstatistic.py  ztest.py
experiment_analysis/utils/: log.py
scripts/: delta_method_coverage.py
tests/: conftest.py
tests/ab/: test_additive_metric.py  test_randomization_inference.py  test_ratio_metric.py
tests/ab/additive_metric/: conftest.py  test_additive_metric.py  test_additive_metric_bootstrap_inference.py  test_additive_metric_randomization_inference.py  test_ratio_metric.py
tests/data_models/: test_additive_metric_data.py  test_ratio_metric_data.py
tests/dummy/: test_dummy2.py
