[tool.poetry]
authors = []
description = ""
name = "experiment-analysis"
version = "0.0.1"

[tool.poetry.dependencies]
python = "~3.9.13"
numpy = "^1.21.2"
pandas = "^1.3.3"
tqdm = "^4.64.1"


[tool.poetry.dev-dependencies]
toml = "^0.10.2"
coverage = "^6.3.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.971"
black = "^22.6.0"

[tool.black]
include = '\.pyi?$'
line-length = 79
target-version = ['py39']

[tool.coverage.paths]
source = ["poetry_template", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["poetry_template"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.darglint]
ignore_regex = "^_(.*)"
strictness = "short"

[tool.isort]
line_length = 79
multi_line_output = 3
profile = "black"

[tool.flake8]
format = "pylint"
max-complexity = 10
max-line-length = 79
statistics = "True"
ignore = ["E203", "W503"]

[tool.pytest.ini_options]
junit_family = "xunit2"

[tool.mypy]
platform = "linux"
python_version = 3.9

show_column_numbers = "True"

follow_imports = "normal"

ignore_missing_imports = "True"

disallow_any_generics = "True"
disallow_untyped_calls = "True"
strict_optional = "True"
warn_no_return = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unused_ignores = "True"

check_untyped_defs = "True"
disallow_untyped_defs = "True"

cache_dir = "/dev/null"

[[tool.mypy.overrides]]
follow_imports = "skip"
module = "aiohttp"

[[tool.mypy.overrides]]
follow_imports = "skip"
module = "_version"

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams"

[tool.pylint.messages_control]
disable = "all"
enable = [
  "abstract-method",
  "arguments-differ",
  "differing-param-doc",
  "differing-type-doc",
  "invalid-overridden-method",
  "missing-param-doc",
  "missing-raises-doc",
  "missing-return-doc",
  "missing-return-type-doc",
  "missing-yield-doc",
  "missing-yield-type-doc",
  "multiple-constructor-doc",
  "protected-access",
  "redundant-returns-doc",
  "redundant-yields-doc",
  "signature-differs",
  "super-init-not-called",
  "unused-argument",
  "unused-variable",
  "useless-object-inheritance",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]